<resources>
    <string name="app_name">Socrates</string>
    <string name="action_settings">Settings</string>
    <string name="title1">Wisdom</string>
    <string name="content1">1. The only true wisdom is in knowing you know nothing.</string>
    <string name="content2">2. Be as you wish to seem.</string>
    <string name="content3">3. True wisdom comes to each of us when we realize how little we understand about life, ourselves, and the world around us.</string>
    <string name="content4">4. Wisdom begins in wonder.</string>
    <string name="title2">Life</string>
    <string name="content5">1. He is richest who is content with the least, for content is the wealth of nature.</string>
    <string name="content6">2. I am the wisest man alive, for I know one thing, and that is that I know nothing.</string>
    <string name="content7">3. He is a man of courage who does not run away, but remains at his post and fights against the enemy.</string>
    <string name="content8">4. Wisdom begins in wonder.</string>
    <string name="title3">Others</string>
    <string name="content9">1.Employ your time in improving yourself by other men writings, so that you shall gain easily what others have labored hard for.</string>
    <string name="content10">2. If all misfortunes were laid in one common heap whence everyone must take an equal portion, most people would be contented to take their own and depart.</string>
    <string name="content11">3. Death may be the greatest of all human blessings.</string>
    <string name="content12">4. If a man is proud of his wealth, he should not be praised until it is known how he employs it.</string>
    <string name="Socrates">image</string>
    <string name="about">ABOUT</string>
    <string name="about1">Socrates was born circa 470 BC, in Athens, Greece. We know of his life through the writings of his students, including Plato and Xenophon. His "Socratic method," laid the groundwork for Western systems of logic and philosophy. When the political climate of Greece turned, Socrates was sentenced to death by hemlock poisoning in 399 BC. He accepted this judgment rather than fleeing into exile.</string>
    <string name="about2">Born circa 470 BC in Athens, Greece, Socrates life is chronicled through only a few sources the dialogues of Plato and Xenophon and the plays of Aristophanes. Because these writings had other purposes than reporting his life, it is likely none present a completely accurate picture. However, collectively, they provide a unique and vivid portrayal of Socratess philosophy and personality.</string>
    <string name="homeabout">ABOUT</string>
    <string name="homequotes">QUOTES</string>
    <string name="homedied">HOW HE DIED</string>
    <string name="howhedied1">The jury was not swayed by Socrates defense and convicted him by a vote of 280 to 221. Possibly the defiant tone of his defense contributed to the verdict and he made things worse during the deliberation over his punishment. Athenian law allowed a convicted citizen to propose an alternative punishment to the one called for by the prosecution and the jury would decide. Instead of proposing he be exiled, Socrates suggested he be honored by the city for his contribution to their enlightenment and be paid for his services. The jury was not amused and sentenced him to death by drinking a mixture of poison hemlock.</string>

    <string name="howhedied2">Before Socrates execution, friends offered to bribe the guards and rescue him so he could flee into exile. He declined, stating he was not afraid of death, felt he would be no better off if in exile and said he was still a loyal citizen of Athens, willing to abide by its laws, even the ones that condemned him to death. Plato described Socrates execution in his Phaedo dialogue: Socrates drank the hemlock mixture without hesitation. Numbness slowly crept into his body until it reached his heart. Shortly before his final breath, Socrates described his death as a release of the soul from the body.</string>
    <string name="imageabout">imageabout</string>
    <string name="howtitle">How He Died</string>
    <string name="imageSocrates">ImageSocrates</string>
</resources>
