<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="fill_parent">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textAlignment="center"
        android:fillViewport="false">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/title1"
                android:id="@+id/textView"
                android:textAlignment="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/content1"
                android:id="@+id/textView2"
                android:paddingStart="30dp"
                android:paddingEnd="30dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/content2"
                android:id="@+id/textView3"
                android:paddingStart="30dp"
                android:paddingEnd="30dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/content3"
                android:id="@+id/textView4"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_weight="1.30" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/content4"
                android:id="@+id/textView5"
                android:paddingStart="30dp"
                android:paddingEnd="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/title2"
                android:id="@+id/textView6"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/content5"
                android:id="@+id/textView7"
                android:paddingStart="30dp"
                android:paddingEnd="30dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/content6"
                android:id="@+id/textView8"
                android:paddingStart="30dp"
                android:paddingEnd="30dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/content7"
                android:id="@+id/textView9"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_weight="1.30" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/content8"
                android:id="@+id/textView10"
                android:paddingStart="30dp"
                android:paddingEnd="30dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>