<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView22"
        android:src="@drawable/socrates"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="248dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/imageSocrates" />
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textAlignment="center"
        android:fillViewport="false">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="267dp"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/about"
                android:id="@+id/textView16"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/about1"
                android:id="@+id/textView17"
                android:layout_gravity="center_horizontal"
                android:textAlignment="textStart"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/about2"
                android:id="@+id/textView18"
                android:layout_gravity="center_horizontal"
                android:textAlignment="textStart"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>